# mac-minivnc

./: .gitignore  CLAUDE.md  README.md
.github/: FUNDING.yml
deploy/: README.md  grafana-dashboard.yaml  log-sink.yaml  otel-collector.yaml
deploy/docker-compose/: compose.yaml  otel-config.yaml  prometheus.yml
docs/: BUILDING.md  TELEMETRY.md
mac-cpp-source/: ChainedTCPHelper.cpp  DebugLog.cpp  DebugLog.h  MetricsConfig.h  MetricsConfig.local.h.example  TightVNCSupport.cpp  VNCConfig.h  VNCEncodeCursor.h  VNCEncodeHextile.cpp  VNCEncodeRAW.cpp  VNCEncodeTRLE.cpp  VNCEncodeTRLE.h  VNCEncodeTRLEMono.cpp  VNCEncodeTight.cpp  VNCEncodeTiles.h  VNCEncodeTilesC.cpp  VNCEncodeZRLE.cpp  VNCEncoder.cpp  VNCEncoderZLib.cpp  VNCFrameBuffer.cpp  VNCFrameBuffer.h  VNCPalette.cpp  VNCPalette.h  VNCPaletteTrueColor.cpp  VNCScreenHash.cpp  VNCScreenHash.h  VNCServer.cpp  VNCServer.h  VNCStreamReader.cpp  main.cpp  metrics.c  metrics.h  statsd.c  statsd.h
retro68/: CMakeLists.txt  build.sh  prefix.h  survey.sh
